<?xml version="1.0"?>
<package format="2">
  <name>graph_plot</name>
  <version>0.0.0</version>
  <description>The graph_plot package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>graph_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosparam_utilities</build_depend>
  <build_export_depend>graph_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosparam_utilities</build_export_depend>
  <exec_depend>graph_core</exec_depend>
  <exec_depend>rosparam_utilities</exec_depend>
  <build_depend>graph_display</build_depend>
  <build_export_depend>graph_display</build_export_depend>
  <exec_depend>graph_display</exec_depend>


  <export>
  </export>
</package>
